--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">GuardianChangeApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sections">Section</string>
+    <string name="content">Content</string>
+    <string name="favorite">Favorite</string>
+    <string name="news">News</string>
 </resources>
