--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="logout">Sign out</string>
     <string name="enterAsGuest">Enter as Guest</string>
     <string name="username">Username</string>
+    <string name="password">Password</string>
 </resources>
