--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="register">Register</string>
+    <string name="signout">Sign out</string>
 </resources>
